--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     />
 
-    <title>Paper Dashboard React by Creative Tim</title>
+    <title>Web Griddle</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
